--- a/src/App.module.css
+++ b/src/App.module.css
@@ -18,9 +18,28 @@
 
 
 .Item {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+
+  flex-grow: 1;
+  border: 1px solid white;
+}
+
+.ItemLabel {
+  text-align: left;
+  font-size: 0.8rem;
+  padding: 5px;
+}
+
+.ItemValue {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   flex-grow: 1;
   text-align: center;
-  border: 1px solid white;
+  font-size: 1.5rem;
+  /* background-color: darkmagenta; */
 }
 
 .Answers {
@@ -35,7 +54,8 @@
 
 .Answer {
   flex-grow: 1;
-  min-width: 100px;
+  /* min-width: 100px; */
+  font-size: 1.5rem;
   color: white;
 }
 
@@ -51,4 +71,13 @@
 .AnswerNo:disabled {
   background-color: darkred;
   color: grey;
+  opacity: 0.5;
+  cursor: default;
+}
+
+.AnswerOpt {
+  composes: Answer;
+  flex-grow: 0;
+  /* width: 20px; */
+  background-color: navy;
 }
