--- a/src/App.module.css
+++ b/src/App.module.css
@@ -14,6 +14,7 @@
   max-width: 600px;
   min-height: 100vh;
   margin: 0 auto;
+  position: relative;
 }
 
 
@@ -54,7 +55,6 @@
 
 .Answer {
   flex-grow: 1;
-  /* min-width: 100px; */
   font-size: 1.5rem;
   color: white;
 }
@@ -78,6 +78,5 @@
 .AnswerOpt {
   composes: Answer;
   flex-grow: 0;
-  /* width: 20px; */
   background-color: navy;
 }
