--- a/src/App.module.css
+++ b/src/App.module.css
@@ -13,6 +13,7 @@
   min-width: 400px;
   max-width: 600px;
   min-height: 100vh;
+  min-height: 100svh;
   margin: 0 auto;
   position: relative;
 }
