--- a/src/Options.module.css
+++ b/src/Options.module.css
@@ -1,7 +1,7 @@
 .Overlay {
   position: fixed;
   width: 100vw;
-  height: 100vw;
+  height: 100vh;
   left: 0;
   top: 0;
   background-color: #00000080;
